parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> declaration
Rule 4     statement -> statement assignment
Rule 5     statement -> statement prt
Rule 6     statement -> directives
Rule 7     directives -> NS DIRECTIVES LIBRARIES
Rule 8     declaration -> TYPE IDENTIFIER SEMIC
Rule 9     declaration -> TYPE IDENTIFIER EQUALS expression SEMIC
Rule 10    assignment -> IDENTIFIER EQUALS expression SEMIC
Rule 11    prt -> PRINT LPAREN expression RPAREN SEMIC
Rule 12    expression -> expression PLUS term
Rule 13    expression -> expression MINUS term
Rule 14    term -> term TIMES factor
Rule 15    term -> term DIVIDE factor
Rule 16    factor -> EXP LPAREN factor value RPAREN
Rule 17    factor -> SQR LPAREN factor RPAREN
Rule 18    value -> NUMBER
Rule 19    expression -> term
Rule 20    term -> factor
Rule 21    factor -> value
Rule 22    factor -> IDENTIFIER
Rule 23    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

DIRECTIVES           : 7
DIVIDE               : 15
EQUALS               : 9 10
EXP                  : 16
IDENTIFIER           : 8 9 10 22
LIBRARIES            : 7
LPAREN               : 11 16 17 23
MINUS                : 13
NS                   : 7
NUMBER               : 18
PLUS                 : 12
PRINT                : 11
RPAREN               : 11 16 17 23
SEMIC                : 8 9 10 11
SQR                  : 17
TIMES                : 14
TYPE                 : 8 9
error                : 

Nonterminals, with rules where they appear

assignment           : 4
declaration          : 3
directives           : 6
expression           : 9 10 11 12 13 23
factor               : 14 15 16 17 20
prt                  : 5
statement            : 1 2 4 5
statements           : 1 0
term                 : 12 13 14 15 19
value                : 16 21

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . declaration
    (4) statement -> . statement assignment
    (5) statement -> . statement prt
    (6) statement -> . directives
    (8) declaration -> . TYPE IDENTIFIER SEMIC
    (9) declaration -> . TYPE IDENTIFIER EQUALS expression SEMIC
    (7) directives -> . NS DIRECTIVES LIBRARIES

    TYPE            shift and go to state 5
    NS              shift and go to state 6

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    declaration                    shift and go to state 3
    directives                     shift and go to state 4

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . declaration
    (4) statement -> . statement assignment
    (5) statement -> . statement prt
    (6) statement -> . directives
    (8) declaration -> . TYPE IDENTIFIER SEMIC
    (9) declaration -> . TYPE IDENTIFIER EQUALS expression SEMIC
    (7) directives -> . NS DIRECTIVES LIBRARIES

    TYPE            shift and go to state 5
    NS              shift and go to state 6

    statement                      shift and go to state 7
    declaration                    shift and go to state 3
    directives                     shift and go to state 4

state 2

    (2) statements -> statement .
    (4) statement -> statement . assignment
    (5) statement -> statement . prt
    (10) assignment -> . IDENTIFIER EQUALS expression SEMIC
    (11) prt -> . PRINT LPAREN expression RPAREN SEMIC

    TYPE            reduce using rule 2 (statements -> statement .)
    NS              reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 11

    assignment                     shift and go to state 8
    prt                            shift and go to state 9

state 3

    (3) statement -> declaration .

    IDENTIFIER      reduce using rule 3 (statement -> declaration .)
    PRINT           reduce using rule 3 (statement -> declaration .)
    TYPE            reduce using rule 3 (statement -> declaration .)
    NS              reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)


state 4

    (6) statement -> directives .

    IDENTIFIER      reduce using rule 6 (statement -> directives .)
    PRINT           reduce using rule 6 (statement -> directives .)
    TYPE            reduce using rule 6 (statement -> directives .)
    NS              reduce using rule 6 (statement -> directives .)
    $end            reduce using rule 6 (statement -> directives .)


state 5

    (8) declaration -> TYPE . IDENTIFIER SEMIC
    (9) declaration -> TYPE . IDENTIFIER EQUALS expression SEMIC

    IDENTIFIER      shift and go to state 12


state 6

    (7) directives -> NS . DIRECTIVES LIBRARIES

    DIRECTIVES      shift and go to state 13


state 7

    (1) statements -> statements statement .
    (4) statement -> statement . assignment
    (5) statement -> statement . prt
    (10) assignment -> . IDENTIFIER EQUALS expression SEMIC
    (11) prt -> . PRINT LPAREN expression RPAREN SEMIC

    TYPE            reduce using rule 1 (statements -> statements statement .)
    NS              reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 11

    assignment                     shift and go to state 8
    prt                            shift and go to state 9

state 8

    (4) statement -> statement assignment .

    IDENTIFIER      reduce using rule 4 (statement -> statement assignment .)
    PRINT           reduce using rule 4 (statement -> statement assignment .)
    TYPE            reduce using rule 4 (statement -> statement assignment .)
    NS              reduce using rule 4 (statement -> statement assignment .)
    $end            reduce using rule 4 (statement -> statement assignment .)


state 9

    (5) statement -> statement prt .

    IDENTIFIER      reduce using rule 5 (statement -> statement prt .)
    PRINT           reduce using rule 5 (statement -> statement prt .)
    TYPE            reduce using rule 5 (statement -> statement prt .)
    NS              reduce using rule 5 (statement -> statement prt .)
    $end            reduce using rule 5 (statement -> statement prt .)


state 10

    (10) assignment -> IDENTIFIER . EQUALS expression SEMIC

    EQUALS          shift and go to state 14


state 11

    (11) prt -> PRINT . LPAREN expression RPAREN SEMIC

    LPAREN          shift and go to state 15


state 12

    (8) declaration -> TYPE IDENTIFIER . SEMIC
    (9) declaration -> TYPE IDENTIFIER . EQUALS expression SEMIC

    SEMIC           shift and go to state 16
    EQUALS          shift and go to state 17


state 13

    (7) directives -> NS DIRECTIVES . LIBRARIES

    LIBRARIES       shift and go to state 18


state 14

    (10) assignment -> IDENTIFIER EQUALS . expression SEMIC
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (19) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (20) term -> . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    expression                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 22
    value                          shift and go to state 25

state 15

    (11) prt -> PRINT LPAREN . expression RPAREN SEMIC
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (19) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (20) term -> . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    expression                     shift and go to state 28
    term                           shift and go to state 21
    factor                         shift and go to state 22
    value                          shift and go to state 25

state 16

    (8) declaration -> TYPE IDENTIFIER SEMIC .

    IDENTIFIER      reduce using rule 8 (declaration -> TYPE IDENTIFIER SEMIC .)
    PRINT           reduce using rule 8 (declaration -> TYPE IDENTIFIER SEMIC .)
    TYPE            reduce using rule 8 (declaration -> TYPE IDENTIFIER SEMIC .)
    NS              reduce using rule 8 (declaration -> TYPE IDENTIFIER SEMIC .)
    $end            reduce using rule 8 (declaration -> TYPE IDENTIFIER SEMIC .)


state 17

    (9) declaration -> TYPE IDENTIFIER EQUALS . expression SEMIC
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (19) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (20) term -> . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    expression                     shift and go to state 29
    term                           shift and go to state 21
    factor                         shift and go to state 22
    value                          shift and go to state 25

state 18

    (7) directives -> NS DIRECTIVES LIBRARIES .

    IDENTIFIER      reduce using rule 7 (directives -> NS DIRECTIVES LIBRARIES .)
    PRINT           reduce using rule 7 (directives -> NS DIRECTIVES LIBRARIES .)
    TYPE            reduce using rule 7 (directives -> NS DIRECTIVES LIBRARIES .)
    NS              reduce using rule 7 (directives -> NS DIRECTIVES LIBRARIES .)
    $end            reduce using rule 7 (directives -> NS DIRECTIVES LIBRARIES .)


state 19

    (22) factor -> IDENTIFIER .

    TIMES           reduce using rule 22 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 22 (factor -> IDENTIFIER .)
    SEMIC           reduce using rule 22 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 22 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 22 (factor -> IDENTIFIER .)
    RPAREN          reduce using rule 22 (factor -> IDENTIFIER .)
    NUMBER          reduce using rule 22 (factor -> IDENTIFIER .)


state 20

    (10) assignment -> IDENTIFIER EQUALS expression . SEMIC
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term

    SEMIC           shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32


state 21

    (19) expression -> term .
    (14) term -> term . TIMES factor
    (15) term -> term . DIVIDE factor

    SEMIC           reduce using rule 19 (expression -> term .)
    PLUS            reduce using rule 19 (expression -> term .)
    MINUS           reduce using rule 19 (expression -> term .)
    RPAREN          reduce using rule 19 (expression -> term .)
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34


state 22

    (20) term -> factor .

    TIMES           reduce using rule 20 (term -> factor .)
    DIVIDE          reduce using rule 20 (term -> factor .)
    SEMIC           reduce using rule 20 (term -> factor .)
    PLUS            reduce using rule 20 (term -> factor .)
    MINUS           reduce using rule 20 (term -> factor .)
    RPAREN          reduce using rule 20 (term -> factor .)


state 23

    (16) factor -> EXP . LPAREN factor value RPAREN

    LPAREN          shift and go to state 35


state 24

    (23) factor -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (19) expression -> . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (20) term -> . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    expression                     shift and go to state 36
    term                           shift and go to state 21
    factor                         shift and go to state 22
    value                          shift and go to state 25

state 25

    (21) factor -> value .

    TIMES           reduce using rule 21 (factor -> value .)
    DIVIDE          reduce using rule 21 (factor -> value .)
    SEMIC           reduce using rule 21 (factor -> value .)
    PLUS            reduce using rule 21 (factor -> value .)
    MINUS           reduce using rule 21 (factor -> value .)
    RPAREN          reduce using rule 21 (factor -> value .)
    NUMBER          reduce using rule 21 (factor -> value .)


state 26

    (17) factor -> SQR . LPAREN factor RPAREN

    LPAREN          shift and go to state 37


state 27

    (18) value -> NUMBER .

    TIMES           reduce using rule 18 (value -> NUMBER .)
    DIVIDE          reduce using rule 18 (value -> NUMBER .)
    SEMIC           reduce using rule 18 (value -> NUMBER .)
    PLUS            reduce using rule 18 (value -> NUMBER .)
    MINUS           reduce using rule 18 (value -> NUMBER .)
    RPAREN          reduce using rule 18 (value -> NUMBER .)
    NUMBER          reduce using rule 18 (value -> NUMBER .)


state 28

    (11) prt -> PRINT LPAREN expression . RPAREN SEMIC
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32


state 29

    (9) declaration -> TYPE IDENTIFIER EQUALS expression . SEMIC
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term

    SEMIC           shift and go to state 39
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32


state 30

    (10) assignment -> IDENTIFIER EQUALS expression SEMIC .

    IDENTIFIER      reduce using rule 10 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    PRINT           reduce using rule 10 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    TYPE            reduce using rule 10 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    NS              reduce using rule 10 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    $end            reduce using rule 10 (assignment -> IDENTIFIER EQUALS expression SEMIC .)


state 31

    (12) expression -> expression PLUS . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (20) term -> . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    term                           shift and go to state 40
    factor                         shift and go to state 22
    value                          shift and go to state 25

state 32

    (13) expression -> expression MINUS . term
    (14) term -> . term TIMES factor
    (15) term -> . term DIVIDE factor
    (20) term -> . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    term                           shift and go to state 41
    factor                         shift and go to state 22
    value                          shift and go to state 25

state 33

    (14) term -> term TIMES . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    factor                         shift and go to state 42
    value                          shift and go to state 25

state 34

    (15) term -> term DIVIDE . factor
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    factor                         shift and go to state 43
    value                          shift and go to state 25

state 35

    (16) factor -> EXP LPAREN . factor value RPAREN
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    factor                         shift and go to state 44
    value                          shift and go to state 25

state 36

    (23) factor -> LPAREN expression . RPAREN
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32


state 37

    (17) factor -> SQR LPAREN . factor RPAREN
    (16) factor -> . EXP LPAREN factor value RPAREN
    (17) factor -> . SQR LPAREN factor RPAREN
    (21) factor -> . value
    (22) factor -> . IDENTIFIER
    (23) factor -> . LPAREN expression RPAREN
    (18) value -> . NUMBER

    EXP             shift and go to state 23
    SQR             shift and go to state 26
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 27

    factor                         shift and go to state 46
    value                          shift and go to state 25

state 38

    (11) prt -> PRINT LPAREN expression RPAREN . SEMIC

    SEMIC           shift and go to state 47


state 39

    (9) declaration -> TYPE IDENTIFIER EQUALS expression SEMIC .

    IDENTIFIER      reduce using rule 9 (declaration -> TYPE IDENTIFIER EQUALS expression SEMIC .)
    PRINT           reduce using rule 9 (declaration -> TYPE IDENTIFIER EQUALS expression SEMIC .)
    TYPE            reduce using rule 9 (declaration -> TYPE IDENTIFIER EQUALS expression SEMIC .)
    NS              reduce using rule 9 (declaration -> TYPE IDENTIFIER EQUALS expression SEMIC .)
    $end            reduce using rule 9 (declaration -> TYPE IDENTIFIER EQUALS expression SEMIC .)


state 40

    (12) expression -> expression PLUS term .
    (14) term -> term . TIMES factor
    (15) term -> term . DIVIDE factor

    SEMIC           reduce using rule 12 (expression -> expression PLUS term .)
    PLUS            reduce using rule 12 (expression -> expression PLUS term .)
    MINUS           reduce using rule 12 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 12 (expression -> expression PLUS term .)
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34


state 41

    (13) expression -> expression MINUS term .
    (14) term -> term . TIMES factor
    (15) term -> term . DIVIDE factor

    SEMIC           reduce using rule 13 (expression -> expression MINUS term .)
    PLUS            reduce using rule 13 (expression -> expression MINUS term .)
    MINUS           reduce using rule 13 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 13 (expression -> expression MINUS term .)
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34


state 42

    (14) term -> term TIMES factor .

    TIMES           reduce using rule 14 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 14 (term -> term TIMES factor .)
    SEMIC           reduce using rule 14 (term -> term TIMES factor .)
    PLUS            reduce using rule 14 (term -> term TIMES factor .)
    MINUS           reduce using rule 14 (term -> term TIMES factor .)
    RPAREN          reduce using rule 14 (term -> term TIMES factor .)


state 43

    (15) term -> term DIVIDE factor .

    TIMES           reduce using rule 15 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 15 (term -> term DIVIDE factor .)
    SEMIC           reduce using rule 15 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 15 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 15 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 15 (term -> term DIVIDE factor .)


state 44

    (16) factor -> EXP LPAREN factor . value RPAREN
    (18) value -> . NUMBER

    NUMBER          shift and go to state 27

    value                          shift and go to state 48

state 45

    (23) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 23 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 23 (factor -> LPAREN expression RPAREN .)
    SEMIC           reduce using rule 23 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 23 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 23 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 23 (factor -> LPAREN expression RPAREN .)
    NUMBER          reduce using rule 23 (factor -> LPAREN expression RPAREN .)


state 46

    (17) factor -> SQR LPAREN factor . RPAREN

    RPAREN          shift and go to state 49


state 47

    (11) prt -> PRINT LPAREN expression RPAREN SEMIC .

    IDENTIFIER      reduce using rule 11 (prt -> PRINT LPAREN expression RPAREN SEMIC .)
    PRINT           reduce using rule 11 (prt -> PRINT LPAREN expression RPAREN SEMIC .)
    TYPE            reduce using rule 11 (prt -> PRINT LPAREN expression RPAREN SEMIC .)
    NS              reduce using rule 11 (prt -> PRINT LPAREN expression RPAREN SEMIC .)
    $end            reduce using rule 11 (prt -> PRINT LPAREN expression RPAREN SEMIC .)


state 48

    (16) factor -> EXP LPAREN factor value . RPAREN

    RPAREN          shift and go to state 50


state 49

    (17) factor -> SQR LPAREN factor RPAREN .

    TIMES           reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)
    DIVIDE          reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)
    SEMIC           reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)
    PLUS            reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)
    MINUS           reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)
    RPAREN          reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)
    NUMBER          reduce using rule 17 (factor -> SQR LPAREN factor RPAREN .)


state 50

    (16) factor -> EXP LPAREN factor value RPAREN .

    TIMES           reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)
    DIVIDE          reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)
    SEMIC           reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)
    PLUS            reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)
    MINUS           reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)
    RPAREN          reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)
    NUMBER          reduce using rule 16 (factor -> EXP LPAREN factor value RPAREN .)

